<resources>
    <string name="app_name">AgendaTrucha</string>
    <string name="agenda_2_0">Agenda 2.0</string>
    <string name="crear_contacto">Crear contacto</string>
    <string name="button">Button</string>
    <string name="editar_contacto">Editar contacto</string>
    <string name="borrar_contacto">Borrar contacto</string>
    <string name="mostrar_todos_los_contactos">Mostrar todos los contactos</string>
    <string name="buscar_contacto">Buscar contacto</string>
    <string name="buscar">Buscar</string>
    <string name="nombre_del_contacto">Nombre del contacto</string>
    <string name="volver">Volver</string>
    <string name="buscarContacto">Buscar contacto</string>
    <string name="a_adir_contacto">.:Añadir Contacto:.</string>
    <string name="a_adir_contacto1">.:Añadir Contacto:.</string>
    <string name="mostrar_lista_de_contactos">.:Mostrar Lista de Contactos:.</string>
    <string name="nombre_del_contacto1">Nombre del Contacto</string>
    <string name="apellidos_del_contacto">Apellidos del Contacto</string>
    <string name="tel_fono_del_contacto">Teléfono del Contacto</string>
    <string name="direcci_n_del_contacto">Dirección del Contacto</string>
    <string name="lista_de_contactos">.:Lista de Contactos:.</string>
    <string name="name">Name:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="apellidos_del_contacto1">Apellidos del contacto</string>
    <string name="APELLIDOS">...</string>
    <string name="telefono">...</string>
    <string name="direccion">...</string>
    <string name="NAME">...</string>
    <string name="guardar">Guardar</string>
    <string name="editar_contacto2">Editar Contacto</string>
    <string name="mostrar_contacto">Mostrar Contacto</string>
</resources>