<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/agenda_2_0"
            android:textColor="@color/white"
            app:autoSizeMaxTextSize="50dp"
            app:autoSizeMinTextSize="20dp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/crear"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="boton"
            android:tag="1"
            android:text="@string/crear_contacto"
            app:icon="@android:drawable/ic_menu_add" />

        <Button
            android:id="@+id/editar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="boton"
            android:tag="2"
            android:text="@string/editar_contacto"
            app:icon="@android:drawable/ic_menu_edit" />

        <Button
            android:id="@+id/borrar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="boton"
            android:tag="3"
            android:text="@string/borrar_contacto"
            app:icon="@android:drawable/ic_menu_delete" />

        <Button
            android:id="@+id/buscar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="boton"
            android:tag="4"
            android:text="@string/buscar_contacto"
            app:icon="@android:drawable/ic_menu_search" />

        <Button
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="boton"
            android:tag="5"
            android:text="@string/mostrar_todos_los_contactos"
            app:icon="@android:drawable/ic_menu_my_calendar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>